<resources>
    <string name="app_name">BMD Controller</string>
    <string name="please_open_blue">Please turn on Bluetooth first</string>
    <string name="start_scan">start scan</string>
    <string name="stop_scan">stop scan</string>
    <string name="notifyTitle">Prompt</string>
    <string name="gpsNotifyMsg">Current mobile phone scanning Bluetooth needs to open the positioning function</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Go to settings</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="enter">Enter</string>
    <string name="connect_fail">connection failed</string>
    <string name="active_disconnected">disconnect</string>
    <string name="disconnected">Connection disconnect</string>
    <string name="Aperture">Aperture</string>
    <string name="ISO">ISO</string>
    <string name="Shutter">Shutter</string>
    <string name="title_activity_setting">setting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Setting">Setting</string>
    <string name="DynamicRange">Dynamic Range</string>
    <string name="DR_Video">Video</string>
    <string name="DR_Extended_Video">Extended Video</string>
    <string name="DR_Film">Film</string>
    <string name="Project_Frame_Rate">Project Frame Rate</string>
    <string name="CODEC_QUALITY">CODEC AND QUALITY</string>
    <string name="BlackmagicRaw">BlackmagicRaw</string>
    <string name="ProRes">ProRes</string>
    <string name="Constant_Bitrate">Constant Bitrate</string>
    <string name="Constant_Quality">Constant Quality</string>
    <string name="ThreeToOne">3:1</string>
    <string name="FiveToOne">5:1</string>
    <string name="EightToOne">8:1</string>
    <string name="TwelveToOne">12:1</string>
    <string name="Q_Zero">Q0</string>
    <string name="Q_Five">Q5</string>
    <string name="ProRes_HQ">HQ</string>
    <string name="ProRes_422">422</string>
    <string name="Prores_LT">LT</string>
    <string name="ProRes_PXY">PXY</string>
    <string name="WB_Sun">SUN</string>
    <string name="WB_Lamp">LAMP</string>
    <string name="WB_Fluorescent">Fluorescent</string>
    <string name="WB_Shadow">Shadow</string>
    <string name="WB_CLOUDY">cloudy</string>
    <string name="WB_Auto">Auto</string>
</resources>
